Fix side effect of "custom message always visible"

--- a/src/stylesheets/toolbar.scss
+++ b/src/stylesheets/toolbar.scss
@@ -91,6 +91,7 @@
   border-color: var(--color-admonition-note);
   color: var(--color-admonition-note-text);
   text-align: center;
+  width:100%;
 }
 
 
